Fix --use-mus-in-renderer for mus+ash

BUG=626390
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2136313002
Cr-Commit-Position: refs/heads/master@{#405470}

Former-commit-id: 168910acde5c5eb79f595ef274cb53cf37915df4